--- a/frontend/src/pages/playerStats.css
+++ b/frontend/src/pages/playerStats.css
@@ -11,3 +11,19 @@
 .filter-button  {
     background-color: lightblue;
 }
+
+.stats-container {
+    margin-top: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+}
+  
+.stats-container-title {
+    margin: 0;
+    font-size: 20px;
+}
